Extensions/TbAPIHooks/USER32.h

BOOL WINAPI _TBNAME(IsWindow)(HWND hwnd);
DWORD WINAPI _TBNAME(GetWindowThreadProcessId)(__in HWND hWnd, __out_opt LPDWORD lpdwProcessId);
BOOL WINAPI _TBNAME(IsWindowEnabled)(HWND hwnd);
BOOL WINAPI _TBNAME(EnableWindow)(HWND hwnd, BOOL bEnable = TRUE);
HWND WINAPI _TBNAME(SetParent)(HWND hwnd, HWND hwndParent);
HWND WINAPI _TBNAME(GetParent)(HWND hwnd);
HWND WINAPI _TBNAME(GetWindow)(HWND hwnd, UINT uCmd);
BOOL WINAPI _TBNAME(ShowWindow)(__in HWND hwnd,__in int nCmdShow);
BOOL WINAPI _TBNAME(IsWindowVisible)(__in HWND hwnd);
BOOL WINAPI _TBNAME(GetWindowRect)(__in HWND hWnd,__out LPRECT lpRect);
HWND WINAPI _TBNAME(SetFocus)(__in HWND hWnd);
HWND WINAPI _TBNAME(GetFocus)();
HWND WINAPI _TBNAME(SetActiveWindow)(_In_ HWND hWnd);
BOOL WINAPI _TBNAME(ScreenToClient)( __in HWND hWnd, __inout LPPOINT lpPoint);
BOOL WINAPI _TBNAME(MoveWindow)(__in HWND hWnd,__in int X,__in int Y,__in int nWidth,__in int nHeight,__in BOOL bRepaint);
BOOL WINAPI _TBNAME(SetWindowPos)(__in HWND hWnd,__in_opt HWND hWndInsertAfter,__in int X,__in int Y,__in int cx,__in int cy,__in UINT uFlags);
BOOL WINAPI _TBNAME(GetClientRect)(__in HWND hWnd,__out LPRECT lpRect);