server/library/taskbuilder-netcore-common/Generic/ExternalAPI.cs


		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr SetCapture(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool ReleaseCapture();
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool GetClientRect(IntPtr hWnd, ref Rect clientRect);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool GetWindowRect(IntPtr hWnd, ref Rect windowRect);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool ScreenToClient(IntPtr hWnd, ref Point pt);
		
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool GetWindowPlacement(IntPtr hWnd, ref WINDOWPLACEMENT windowPlacement);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool ShowWindow(IntPtr hWnd, UInt32 showCmd);
		[DllImport("user32")]
		public static extern bool SetForegroundWindow(IntPtr hWnd);
		[DllImport("user32")]
		public static extern bool AllowSetForegroundWindow(Int32 processId);
		[DllImport("user32")]
		public static extern IntPtr GetForegroundWindow();
		[DllImport("user32")]
		public static extern bool AttachThreadInput(UInt32 aProcessId, UInt32 aToProcessId, bool attach);
		[DllImport("user32")]
		public static extern UInt32 GetWindowThreadProcessId(IntPtr hWnd, ref UInt32 processId);
		[DllImport("user32")]
		public static extern UInt32 GetCurrentThreadId();
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool PostMessage(IntPtr hWnd, int Msg, IntPtr wParam, IntPtr lParam);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr SendMessage(IntPtr hWnd, int Msg, IntPtr wParam, IntPtr lParam);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool ShowWindow(IntPtr hWnd, int showCmd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool SetWindowPos(IntPtr hWnd, IntPtr hWndInsertAfter, int X, int Y, int cx, int cy, uint uFlags);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool MoveWindow(IntPtr hWnd, int X, int Y, int nWidth, int nHeight, bool bRepaint);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr SetActiveWindow(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr SetParent(IntPtr hWndChild, IntPtr hWndNewParent);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool PrintWindow(IntPtr hwnd, IntPtr hdcBlt, UInt32 nFlags);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern int GetWindowText(IntPtr hWnd, StringBuilder lpString, int nMaxCount);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern int GetWindowTextLength(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr GetWindow(IntPtr hWnd, UInt32 uCmd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool IsWindow(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool IsWindowEnabled(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool EnableWindow(IntPtr hWnd, bool enable);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr SetFocus(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool UpdateWindow(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool IsWindowVisible(IntPtr hWnd);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool InvalidateRect(IntPtr hWnd, IntPtr windowRect, bool bErase);
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern bool InvalidateRect(IntPtr hWnd, ref Rect windowRect, bool bErase);
		[DllImport("user32.dll", CharSet = CharSet.Unicode)]
		public static extern IntPtr GetFocus();
		[DllImport("user32.dll", CharSet = CharSet.Unicode)]
		public static extern IntPtr GetParent(IntPtr handle);
		[DllImport("user32.dll", CharSet = CharSet.Unicode)]
		public static extern int GetWindowLong(IntPtr hWnd, int Index);
		[DllImport("user32.dll", CharSet = CharSet.Unicode)]
		public static extern int SetWindowLong(IntPtr hWnd, int Index, int Value);
		[DllImport("gdi32.dll", CharSet = CharSet.Unicode)]
		public static extern bool BitBlt(
				IntPtr hdcDest, // handle to destination DC
				int nXDest,  // x-coord of destination upper-left corner
				int nYDest,  // y-coord of destination upper-left corner
				int nWidth,  // width of destination rectangle
				int nHeight, // height of destination rectangle
				IntPtr hdcSrc,  // handle to source DC
				int nXSrc,   // x-coordinate of source upper-left corner
				int nYSrc,   // y-coordinate of source upper-left corner
				System.Int32 dwRop  // raster operation code
			);
		[StructLayout(LayoutKind.Sequential, Pack = 8, CharSet = CharSet.Unicode)]
		public struct POINT
		{
			public int x;
			public int y;
		}
		[DllImport("User32", CharSet = CharSet.Unicode)]
		public static extern IntPtr WindowFromPoint(POINT Point);

		[DllImport("advapi32.dll", SetLastError = true)]
		public static extern bool SetKernelObjectSecurity(int Handle, int SecurityInformation, ref SECURITY_DESCRIPTOR SecurityDescriptor);

		[DllImport("user32.dll", CharSet = CharSet.Unicode)]
		public extern static bool DestroyIcon(IntPtr handle);



		//-----------------------------------------------------------------------------------------
		public static string GetFullWindowText(IntPtr handle)
		{
			int bufferSize = GetWindowTextLength(handle);
			StringBuilder sbWindowText = new StringBuilder(bufferSize + 1);
			if (GetWindowText(handle, sbWindowText, bufferSize + 1) == 0)
				sbWindowText.Append("No title");

			return sbWindowText.ToString();
		}

		#endregion

		#region Kernel32 APIs
		[DllImport("kernel32")]
		public static extern int ProcessIdToSessionId(uint dwProcessId, out uint pSessionId);
		[DllImport("kernel32")]
		public static extern long GetLastError();

        [DllImport("kernel32.dll")]
        public static extern uint GetProfileString(string lpAppName, string lpKeyName,
           string lpDefault, [Out] StringBuilder lpReturnedString, uint nSize);

		#endregion


		
	}
}

